fix: return overflow-x

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,6 +18,7 @@
 }
 
 body {
+  overflow-x: hidden;
   font-family: Inter, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
